Добавил функционал для пациентов, а так же обновил документацию в swagger
